--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
     <section id="contact">
         <div class="container">
-            <h2>Contact</h2>
+            <h2>container</h2>
             <p>Feel free to reach out to me through the following methods:</p>
             <ul>
-                <li>Email: example@example.com</li>
-                <li>Phone: 123-456-7890</li>
+                <li>Email: dineshkumar6569504779@gmail.com</li>
+                <li>Phone: 6369504779,8807587457</li>
             </ul>
         </div>
     </section>
